--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-cli-plugin-s3-deploy": "^4.0.0-rc3",
+    "vue-ctk-date-time-picker": "^2.4.0",
     "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.5",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
